Fix min width of distance predend text
If the value is a floating point, in was not aligned properly through
all rows of the table.

--- a/app/frontend/src/app/pages/athletics/athletics.component.scss
+++ b/app/frontend/src/app/pages/athletics/athletics.component.scss
@@ -5,3 +5,8 @@
 .error-message {
   display: block !important;
 }
+
+// Fix the distance prepend text with a min width to make it even
+.distance-pre-text {
+  min-width: 134px;
+}
